# Maverick

./: .gitignore  pyproject.toml  setup.py  setup.sh  upload_to_poly.sh
demo_src/: 2020-09-29-Maverick.md  2020-09-30-ScreenPlay.md  2021-02-04-galgame.md  2021-02-06-galgame-linux.md  2021-06-23-WinDirStat.md  2021-07-20-Flipping.md  2021-07-25-Osdlyrics-Translation.md  2021-07-28-Awesome-Rust-Unstable-Features.md  2022-10-01-C23-quickview.md  2023-02-24-Software-RAID-Vs-Hardware-RAID.md  2024-02-06-Things-about-windows-disks.md  2024-03-07-Windows-SecureBoot-qemu.md  2024-11-28-Android-Make-Storage-Clean.md  2025-02-19-Record-RTMP-with-rust-enabled.md  2025-02-25-Fuck-Wuawei-HN8145XR.md  2025-06-28-Frigate-on-NVIDIA-desktop.md  2026-01-03-Remote-Desktop.md  about.md  config.py
demo_src/.obsidian/: workspace
