[project]
name = "maverick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "feedgen>=1.0.0",
    "flake8>=7.1.2",
    "jinja2>=3.1.5",
    "mistune==2.0.0a4",
    "moment>=0.12.1",
    "pillow>=11.1.0",
    "pygments>=2.19.1",
    "pyyaml>=6.0.2",
    "yapf>=0.43.0",
]
